# fooyin

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitignore  .gitmodules  .mailmap  BUILD.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  ROADMAP.md  vcpkg.json  version.h.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.h  commandline.cpp  commandline.h  config.h.in  main.cpp  pch.h  singleinstance.cpp  singleinstance.h  threadmanager.cpp  threadmanager.h  version.h.in
src/core/: CMakeLists.txt  application.cpp  application.h  constants.h  corepaths.cpp  corepaths.h  coreplugin.h  coreplugincontext.h  coresettings.cpp  coresettings.h  fysource.cpp  internalcoresettings.cpp  internalcoresettings.h  stringpool.cpp  track.cpp  translationloader.cpp  translationloader.h  translations.cpp  translations.h  typedefs.h
src/core/actions/: actioncontainer.cpp  actioncontainer.h  actionmanager.cpp  actionmanager.h
src/core/app/: threadmanager.cpp  threadmanager.h  worker.cpp  worker.h
src/core/database/: database.cpp  database.h  databasehelpers.cpp  databasehelpers.h  databasemodule.cpp  databasemodule.h  databasequery.cpp  databasequery.h  dbschema.cpp  dbschema.h  generaldatabase.cpp  generaldatabase.h  library.cpp  library.h  librarydatabase.cpp  librarydatabase.h  module.cpp  module.h  playbackqueuedatabase.cpp  playbackqueuedatabase.h  playlistdatabase.cpp  playlistdatabase.h  query.cpp  query.h  settingsdatabase.cpp  settingsdatabase.h  trackdatabase.cpp  trackdatabase.h
src/core/engine/: archiveinput.cpp  archiveinput.h  audioanalysisbus.cpp  audioanalysisbus.h  audiobuffer.cpp  audioclock.cpp  audioclock.h  audioconverter.cpp  audiodecoder.cpp  audioencoderregistry.cpp  audioengine.cpp  audioengine.h  audioformat.cpp  audioinput.cpp  audioloader.cpp  audiooutput.cpp  audiooutput.h  audioplaybackengine.cpp  audioplaybackengine.h  audioplayer.cpp  audioplayer.h  audiorenderer.cpp  audiorenderer.h  audioutils.cpp  audioutils.h  decoderprovider.cpp  engine.h  enginehandler.cpp  enginehandler.h  enginehelpers.cpp  enginehelpers.h  enginempv.cpp  enginempv.h  fadingdefs.cpp  replaygainscanner.cpp  replaygainscanner.h  tagdefs.h  taglibparser.cpp  taglibparser.h  visualisationbackend.cpp  (+2 more)
src/core/models/: album.cpp  album.h  artist.cpp  artist.h  container.cpp  container.h  disc.cpp  disc.h  libraryitem.h  musicitem.h  track.cpp  track.h  trackfwd.h
src/core/network/: hlsstreamdevice.cpp  hlsstreamdevice.h  networkaccessmanager.cpp  networkstreamdevice.cpp  networkstreamdevice.h  networkutils.cpp  remoteioservice.cpp  remotestreamdevice.cpp  streamdeviceutils.cpp  streamdeviceutils.h
src/core/playback/: playbackcoordinator.cpp  playbackcoordinator.h  playbackprogresstracker.cpp  playbackprogresstracker.h  playbackqueue.cpp  playbackqueuestore.cpp  playbackqueuestore.h  playbacksession.cpp  playbacksession.h  playercontroller.cpp  playlistnavigator.cpp  playlistnavigator.h
src/core/player/: playbackqueue.cpp  playercontroller.cpp  playercontroller.h  playermanager.h
src/core/playlist/: fyplaylist.cpp  fyplaylist.h  libraryplaylistinterface.h  libraryplaylistmanager.cpp  libraryplaylistmanager.h  playlist.cpp  playlist.h  playlistchangeset.cpp  playlisthandler.cpp  playlisthandler.h  playlistloader.cpp  playlistloader.h  playlistmanager.h  playlistparser.cpp  playlistparserregistry.cpp  playlistparserregistry.h
src/core/plugins/: databaseplugin.h  plugin.cpp  plugin.h  plugincontext.h  plugininfo.cpp  plugininfo.h  pluginmanager.cpp  pluginmanager.h  settingsplugin.h  threadplugin.h  widgetplugin.h
src/core/tagging/: tags.h  (+14 more)
src/database/: database.cpp  database.h  library.cpp  library.h  librarydatabase.cpp  librarydatabase.h  librarydatabasemanager.cpp  librarydatabasemanager.h  module.cpp  module.h  playlistdatabase.cpp  playlistdatabase.h  query.cpp
src/gui/: CMakeLists.txt  coverprovider.cpp  coverrepository.cpp  editablelayout.cpp  editablelayout.h  editablelayout_p.h  firstrundialog.cpp  firstrundialog.h  fylayout.cpp  fywidget.cpp  fywidget.h  guiapplication.cpp  guiapplication.h  guiconstants.h  guipaths.cpp  guipaths.h  guiplugin.h  guiplugincontext.h  guisettings.cpp  guisettings.h  guistyleprovider.cpp  guiutils.cpp  guiutils.h  iconloader.cpp  internalguisettings.cpp  internalguisettings.h  layoutcommands.cpp  layoutcommands.h  layoutprovider.cpp  layoutprovider.h  mainmenubar.cpp  mainmenubar.h  mainwindow.cpp  mainwindow.h  quicksetupdialog.cpp  quicksetupdialog.h  scanprogresstext.cpp  scanprogresstext.h  sortactionhandler.cpp  sortactionhandler.h  (+15 more)
src/libs/: CMakeLists.txt
src/models/: album.cpp  artist.cpp  container.h  disc.cpp  disc.h  track.cpp  track.h
src/plugins/: CMakeLists.txt
src/tagging/: tags.cpp  tagutils.cpp
src/utils/: CMakeLists.txt  async.h  audioutils.cpp  clickablelabel.cpp  clickablelabel.h  comboicon.cpp  comboicon.h  coverprovider.cpp  crypto.cpp  crypto.h  datastream.cpp  enumhelper.h  expandableinputbox.cpp  expandingcombobox.cpp  extendabletableview.cpp  extentabletableview.cpp  extentabletableview.h  factoryhelper.h  fileutils.cpp  fypaths.cpp  headerview.cpp  headerview.h  helpers.h  hovermenu.cpp  hovermenu.h  id.cpp  id.h  itemregistry.cpp  itemregistry.h  logslider.cpp  menuheader.cpp  menuheader.h  modelutils.cpp  modelutils.h  multilinedelegate.cpp  multilinedelegate.h  overlayfilter.cpp  overlayfilter.h  overlaywidget.cpp  overlaywidget.h  (+41 more)
tests/: CMakeLists.txt  cueparsertest.cpp  ffmpegreadertest.cpp  m3uparsertest.cpp  scriptformattertest.cpp  scriptparsertest.cpp  tagreadertest.cpp  tagwritertest.cpp  testutils.cpp  testutils.h
tests/core/: scriptparsertest.cpp  stringpooltest.cpp  tracktest.cpp
tests/data/: audio.qrc  cue.qrc  playlists.qrc
tests/filters/: fieldparsertest.cpp
tests/gui/: currentplaylistcontrollertest.cpp  guiutilstest.cpp  playlistselectionobservertest.cpp  playlistviewrefreshertest.cpp  scriptformattertest.cpp  scriptreferenceentriestest.cpp
tests/utils/: helperstest.cpp  stringutilstest.cpp
(+2074 files in other folders)
